fixed GitHub Gist block smooth scroll on iOs

--- a/src/blocks/gist/style.scss
+++ b/src/blocks/gist/style.scss
@@ -3,3 +3,6 @@
  */
 @import "../variables";
 
+.ghostkit-gist .blob-wrapper {
+    -webkit-overflow-scrolling: touch;
+}
